쇼핑몰 mapper 연결 수정중

--- a/src/main/resources/templates/themeleaf/index.html
+++ b/src/main/resources/templates/themeleaf/index.html
@@ -36,7 +36,7 @@
 </head>
 
 <body>
-	<script src="/webjars/jquery/dist/jquery.min.js"></script>
+	<script src="/js/jquery-3.2.1.min.js"></script>
 
     <!-- Start Main Top -->
     <div class="main-top">
@@ -686,7 +686,7 @@
     <script src="/js/jquery.superslides.min.js"></script>
     <script src="/js/bootstrap-select.js"></script>
     <script src="/js/inewsticker.js"></script>
-    <script src="/js/bootsnav.js."></script>
+    <script src="/js/bootsnav.js"></script>
     <script src="/js/images-loded.min.js"></script>
     <script src="/js/isotope.min.js"></script>
     <script src="/js/owl.carousel.min.js"></script>
